--- a/BrazilSportWebApp/Web.config
+++ b/BrazilSportWebApp/Web.config
@@ -10,6 +10,10 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
+      
+      <!-- Página de Erro Default-->
+      <customErrors mode="RemoteOnly" defaultRedirect="Default.aspx" />
+      
     </system.web>
 
 </configuration>
