layout - em andamento

--- a/BrazilSportWebApp/Web.config
+++ b/BrazilSportWebApp/Web.config
@@ -12,7 +12,7 @@
       <httpRuntime targetFramework="4.5.2" />
       
       <!-- Página de Erro Default-->
-      <customErrors mode="RemoteOnly" defaultRedirect="Default.aspx" />
+      <customErrors mode="RemoteOnly" defaultRedirect="Sorry.aspx" />
       
     </system.web>
 
